docs: Update swagger docs
